--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Topic</h1>
+<h1>スレッドタイトルを編集する</h1>
 
-<%= render 'form', topic: @topic %>
+<%= render 'スレッドの名前を変える', topic: @topic %>
 
-<%= link_to 'Show', @topic %> |
-<%= link_to 'Back', topics_path %>
+<%= link_to 'スレッドを覗く', @topic %> |
+<%= link_to 'スレッド一覧に戻る', topics_path %>
