--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,34 +7,28 @@
 
 
 
+
 <% @posts.each do |post| %>
-<table class="info">
+<table class="info" id="info<%= post.post_number %>">
   <tr>
-      <div class="pop-box">
-  <label for="popup-on"><label for="popup-on"><div class="btn-open"></div></label>
-  <input type="checkbox" id="popup-on"><%= post.post_number %>
-  <div class="popup">
-    
-    <div class="popup-content">
-       <!-- ポップアップの中身 -->
-       
-     <p><%= post.content %></p>
-     
-        <!-- ./ポップアップの中身　ここまで -->
-    </div>
-    <label for="popup-on"><div class="btn-close">閉じる</div></label>
-  </div>
-</div>
-    <td class="num"><%= post.post_number %>人目の投稿者:</td>
-    <td class="contributor"><%= post.contributor %></td>
+    <td class="num"id="num<%= post.post_number %>"><%= post.post_number %>人目の投稿者:</td>
+    <td class="contributor"id="num<%= post.post_number %>"><%= post.contributor %></td>
+
 </table>
-<table class="comment">
-    <td class="content"><%= post.content %></td>
-    <td calss="reply"><%= link_to '返信',  [@topic, post], method: :reply %></td>
+<table class="comment"id="comment<%= post.post_number %>">
+    <td class="content"id="content<%= post.post_number %>"><%= post.content %></td>
+    <td class="reply"id="reply<%= post.post_number %>">
+   </td>
     <td class="delete"><%= link_to '削除',  [@topic, post], method: :delete, data: { confirm: '本当に書き込みを削除しますか？' } %></td>
       
   </tr>
 </table>
+<p>
+    <% if @post.img? %>
+       <%= image_tag @post.img.url %>
+    <% end %>
+</p>   
+
 <% end %>
 
 
@@ -57,19 +51,27 @@
   </div>
   <div class="field">
     <%= f.label :書き込み内容%>
-    
     <%= f.text_area :content %>
   </div>
   <div class="field">
-  
+     <%= f.label :画像 %><br />
+     <%= f.file_field :img, class: "image" %>
+      <p><%= f.check_box :remove_img %>画像を削除する</p>
   </div>
   <div class="actions">
+      
     <%= f.submit "書き込む"%>
   </div>
+  
 <% end %>
+
+
 
 
 
 
 <%= link_to 'スレッドの編集', edit_topic_path(@topic) %> |
 <%= link_to 'スレッド一覧に戻る', topics_path %>
+
+
+
