--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Topic</h1>
+<h1>新しくスレッドを建てる</h1>
 
-<%= render 'form', topic: @topic %>
+<%= render 'スレッドを建てる', topic: @topic %>
 
-<%= link_to 'Back', topics_path %>
+<%= link_to 'スレッド一覧に戻る', topics_path %>
