スレッドの編集修正

--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>スレッドタイトルを編集する</h1>
 
-<%= render 'スレッドの名前を変える', topic: @topic %>
+<%= render 'form', topic: @topic %>
 
 <%= link_to 'スレッドを覗く', @topic %> |
 <%= link_to 'スレッド一覧に戻る', topics_path %>
