--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -17,7 +17,7 @@
 </table>
 <table class="comment"id="comment<%= post.post_number %>">
     <td class="content"id="content<%= post.post_number %>">
-    <% post_rep = Post.where(post_number: post.reply) 
+    <% post_rep = Post.where(post_number: post.reply).where(topic_id: post.topic_id) 
      @post_rep = post_rep[0]%>
      <%if @post_rep.present?%>
         <% if post.reply.present?%>
